stack.yml
AWSTemplateFormatVersion: 2010-09-09

Parameters:
  # SnapshotId:
  #   Description: EBS snapshot id on which to base the volume
  #   Type: String

  GantreeAPIKey:
    Description: API key for Grantree
    Type: String

  # default
  # 099720109477/ubuntu/images/hvm-ssd/ubuntu-focal-20.04-amd64-server-20210315
  InstanceImage:
    Description: Amazon machine image for the EC2 instance
    Type: String
    Default: ami-0fa37863afb290840

  SSHPublicKeyName:
    Description: EC2 SSH public key name that is available within EC2
    Type: String
    Default: id_rsa_zyzx.pub

  EC2Username:
    Description: EC2 username
    Type: String
    Default: ubuntu

  MoonbeamCollatorPublicAddress:
    Description: Public address/key of the Moonbeam collator node
    Type: String
    Default: "0x21CE00Dd614253FEc68E1EEeC547068883dd91AC"

  MoonbeamBinaryGzipURL:
    Description: Github release URL serving a gzipped prebuilt moonbeam binary
    Type: String
    Default: https://github.com/nuggetdigital/moonbeam-binary/releases/download/v0.6.0/moonbeam-v0.6.0-ubuntu-20.04.gz

  VolumeDataDir:
    Description: Data dir path on the EBS volume
    Type: String
    Default: /var/lib/alphanet-data

  Environment:
    Description: Application environment
    Type: String
    AllowedValues:
      - test
      - prod
    Default: test

  VolumeSizeGiB:
    Description: Size of the EBS volume in GiB
    Type: Number
    Default: 50

  InstanceType:
    Description: EC2 instance type
    Type: String
    Default: m4.large

  InstanceTenancy:
    Description: EC2 instance tenancy type
    Type: String
    Default: default
    AllowedValues:
      - default
      - dedicated

  InstanceName:
    Description: EC2 instance name
    Type: String
    Default: node

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      # NOTE: slicable into 6 subnets
      # 172.26.0.0/19
      # 172.26.32.0/19
      # 172.26.64.0/19
      # 172.26.96.0/19
      # 172.26.128.0/19
      # 172.26.160.0/19
      CidrBlock: 172.26.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: !Ref InstanceTenancy

  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.26.160.0/19
      AvailabilityZone: !Sub ${AWS::Region}a
      MapPublicIpOnLaunch: true

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  GatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties: 
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC

  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties: 
      VpcId: !Ref VPC

  Route:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties: 
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref Subnet

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: !Sub ${AWS::StackName}-security-group
      GroupName: !Sub ${AWS::StackName}-security-group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - Description: !Sub ${AWS::StackName}-security-group-ingress-ssh
          CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 22
          ToPort: 22
 
        - Description: !Sub ${AWS::StackName}-security-group-ingress-p2p-collator
          CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 30333
          ToPort: 30333

        - Description: !Sub ${AWS::StackName}-security-group-ingress-p2p-full-node
          CidrIp: 0.0.0.0/0
          IpProtocol: tcp
          FromPort: 30334
          ToPort: 30334

      SecurityGroupEgress:
        - Description: !Sub ${AWS::StackName}-security-group-egress-all
          CidrIp: 0.0.0.0/0
          IpProtocol: "-1"
          FromPort: 0
          ToPort: 0

  Instance:
    Type: AWS::EC2::Instance
    Properties: 
      AvailabilityZone: !Sub ${AWS::Region}a
      SubnetId: !Ref Subnet
      Volumes:
        - Device: /dev/xvdh # from: ssh into the instance & lsblk
          VolumeId: !Ref Volume
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplate
        Version: !GetAtt LaunchTemplate.LatestVersionNumber

  Volume:
    Type: AWS::EC2::Volume
    Properties:
      AvailabilityZone: !Sub ${AWS::Region}a
      Encrypted: true
      Size: !Ref VolumeSizeGiB
      # SnapshotId: !Ref SnapshotId
      VolumeType: gp3

  LaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: !Sub ${AWS::StackName}-launch-template
      LaunchTemplateData:
        ImageId: !Ref InstanceImage
        InstanceType: !Ref InstanceType
        KeyName: !Ref SSHPublicKeyName
        SecurityGroupIds:
          - !Ref SecurityGroup
        # NOTE: runs a single time at boot - not every restart
        UserData: !Base64
          "Fn::Sub": |
            #!/bin/bash
            /usr/bin/sudo /usr/sbin/adduser moonbase_service --system --no-create-home

            /bin/mkdir ${VolumeDataDir}
            /bin/chmod 0755 ${VolumeDataDir}
            /bin/chown moonbase_service ${VolumeDataDir}

            /bin/mkdir -p /home/${EC2Username}/bin
            /bin/curl -sSf --proto '=https' --tlsv1.2 -L ${MoonbeamBinaryGzipURL} | gunzip > /home/${EC2Username}/bin/moonbeam
            /bin/chmod 0755 /home/${EC2Username}/bin/moonbeam

            /usr/bin/echo -e "
              [Unit]
              Description="Moonbase Alpha systemd service"
              After=network.target
              StartLimitIntervalSec=0

              [Service]
              Type=simple
              Restart=on-failure
              RestartSec=1ms
              User=moonbase_service
              SyslogIdentifier=moonbase
              SyslogFacility=local7
              KillSignal=SIGHUP
              ExecStart=/home/${EC2Username}/bin/moonbeam \
                --parachain-id 1000 \
                --collator \
                --author-id ${MoonbeamCollatorPublicAddress} \
                --port 30333 \
                --rpc-port 9933 \
                --ws-port 9944 \
                --pruning=archive \
                --rpc-methods=Safe \
                --rpc-cors localhost,https://nugget.digital \
                --log info \
                --base-path ${VolumeDataDir} \
                --chain alphanet \
                --name ${AWS::StackName}-collator \
                -- \
                --port 30334 \
                --rpc-port 9934 \
                --ws-port 9945 \
                --pruning=archive \
                --name="${AWS::StackName}-collator-embedded-relayer"

              [Install]
              WantedBy=multi-user.target
            " \
            > /etc/systemd/system/moonbeam.service

            /usr/bin/sudo systemctl enable moonbeam.service
            /usr/bin/sudo systemctl start moonbeam.service

            /bin/mkdir -p /var/lib/gantree/relay
            /bin/mkdir -p /var/lib/gantree/parachain
            
            /usr/bin/echo -e "
            {
              "api_key": "TODO",
              "project_id": "moonbase-alpha",
              "client_id": "${AWS::StackName}-relay",
              "pckrc": "TODO",
              "metrics_host": "http://127.0.0.1:9615"
            }
            " \
            > /var/lib/gantree/relay/.gnw_config.json

            /usr/bin/echo -e "
            {
              "api_key": "TODO",
              "project_id": "moonbase-alpha",
              "client_id": "${AWS::StackName}-parachain",
              "pckrc": "TODO",
              "metrics_host": "http://127.0.0.1:9616"
            }
            " \
            > /var/lib/gantree/parachain/.gnw_config.json

            /usr/bin/echo -e "
            [Unit]
            Description=Gantree Node Watchdog Relay
            After=network.target

            [Service]
            WorkingDirectory=/var/lib/gantree/relay
            Type=simple
            Restart=always
            ExecStart=/usr/local/bin/gantree_node_watchdog

            [Install]
            WantedBy=multi-user.target
            " \
            > /etc/systemd/system/gantree-relay.service

            /usr/bin/echo -e "
            [Unit]
            Description=Gantree Node Watchdog Parachain
            After=network.target

            [Service]
            WorkingDirectory=/var/lib/gantree/parachain
            Type=simple
            Restart=always
            ExecStart=/usr/local/bin/gantree_node_watchdog

            [Install]
            WantedBy=multi-user.target
            " \
            > /etc/systemd/system/gantree-parachain.service

            /usr/bin/sudo /bin/systemctl enable gantree-relay
            /usr/bin/sudo /bin/systemctl start gantree-relay
            /bin/journalctl -f -u gantree-relay

            /usr/bin/sudo /bin/systemctl enable gantree-parachain
            /usr/bin/sudo /bin/systemctl start gantree-parachain
            /bin/journalctl -f -u gantree-parachain

Outputs:
  PublicIp:
    Description: Public IP of the node
    Value: !GetAtt Instance.PublicIp
  VolumeId:
    Description: Id of the EBS volume
    Value: !Ref Volume
